--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -6,7 +6,14 @@
     ansible.builtin.copy:
       src: mongo.repo
       dest: /etc/yum.repos.d/mongo.repo
+      
   - name: Install mongodb server
     ansible.builtin.package:
       name: mongodb-org
       state: present
+
+  - name: start and enable mongodb
+    ansible.builtin.service:
+      name: mongod
+      state: started
+      enable: yes
