--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -6,7 +6,7 @@
     ansible.builtin.copy:
       src: mongo.repo
       dest: /etc/yum.repos.d/mongo.repo
-      
+
   - name: Install mongodb server
     ansible.builtin.package:
       name: mongodb-org
@@ -16,4 +16,4 @@
     ansible.builtin.service:
       name: mongod
       state: started
-      enable: yes
+      enabled: yes
