--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -29,10 +29,15 @@
       url: https://roboshop-artifacts.s3.amazonaws.com/catalogue-v3.zip
       dest: /tmp/catalogue.zip
 
+
+   # This module by default feels like the file exists on the ansible control server, needs to extract on to remote machine
   - name: Extract the catalogue code
     ansible.builtin.unarchive:
       src: /tmp/catalogue.zip
       dest: /app
+      remote_src: true   # remote_src means the file is already available in the catalogue server
+
+  
 
 
 
