--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -37,7 +37,25 @@
       dest: /app
       remote_src: true   # remote_src means the file is already available in the catalogue server
 
+  - name: Install dependencies
+    community.general.npm:
+      path: /app 
+
+  - name: copy the catalogue service to system directory
+    ansible.builtin.copy:
+      src: catalogue.service
+      dest: /etc/systemd/system/catalogue.service
   
+  - name: systemctl daemon reload
+    ansible.builtin.systemd_service:
+      daemon_reload: true
+    
+  - name: start and enable catalogue
+    ansible.builtin.service:
+      name: catalogue
+      state: started
+      enabled: true
+
 
 
 
