--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -74,6 +74,10 @@
     ansible.builtin.debug:
       msg: "{{ catalogue_output }}"
 
+  - name: load products
+    amsible.builtin.command: mongosh --host mongodb.laddudevops.shop </app/db/master-data.js
+    when: catalogue_output.stdout < 0
+
 
 
 
