--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -75,7 +75,7 @@
       msg: "{{ catalogue_output }}"
 
   - name: load products
-    amsible.builtin.command: mongosh --host mongodb.laddudevops.shop </app/db/master-data.js
+    ansible.builtin.command: mongosh --host mongodb.laddudevops.shop </app/db/master-data.js
     when: catalogue_output.stdout < 0
 
 
