--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -76,7 +76,7 @@
 
   - name: load products
     ansible.builtin.command: mongosh --host mongodb.laddudevops.shop </app/db/master-data.js
-    when: catalogue_output.stdout < 0
+    when: catalogue_output.stdout | int < 0
 
 
 
