--- a/redis.yaml
+++ b/redis.yaml
@@ -3,7 +3,7 @@
   become: true
   tasks:
   - name: disable redis default module
-    ansible.builtin.command: dnf module disable redis -yes
+    ansible.builtin.command: dnf module disable redis -y
 
   - name: enable redis:7 module
     ansible.builtin.command: dnf module enable redis:7 -y
