added catalogue file

--- a/inventory.ini
+++ b/inventory.ini
@@ -4,3 +4,7 @@ mongodb.laddudevops.shop
 catalog.laddudevops.shop
 [redis]
 redis.laddudevops.shop
+[user]
+user.laddudevops.shop
+[cart]
+cart.laddudevops.shop
