--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,7 @@
 [mongodb]
 mongodb.laddudevops.shop
 [catalogue]
-catalog.laddudevops.shop
+catalogue.laddudevops.shop
 [redis]
 redis.laddudevops.shop
 [user]
