--- a/frontend.yaml
+++ b/frontend.yaml
@@ -3,10 +3,10 @@
   become: true
   tasks:
   - name: Disable default nginx
-    ansible/builtin.command: dnf module disable nginx -y
+    ansible.builtin.command: dnf module disable nginx -y
 
   - name: Enable nginx
-    ansible/builtin.command: dnf module enable nginx:1.24 -y
+    ansible.builtin.command: dnf module enable nginx:1.24 -y
 
   - name: Install nginx
     ansible.builtin.package:
