--- a/frontend.yaml
+++ b/frontend.yaml
@@ -29,7 +29,7 @@
       state: directory
   
   - name: download frontend code
-    ansible_builtin.get_url:
+    ansible.builtin.get_url:
       url: https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
       dest: /tmp/frontend.zip
 
