--- a/frontend.yaml
+++ b/frontend.yaml
@@ -16,7 +16,7 @@
     ansible.builtin.service:
       name: nginx
       state: started
-      enable: yes
+      enabled: true
 
   - name: Remove html directory
     ansible.builtin.file:
