--- a/shipping.yaml
+++ b/shipping.yaml
@@ -42,4 +42,34 @@
     args:
       chdir: /app
 
+  - name: copy shipping service
+    ansible.builtin.copy:
+      src: shipping.service
+      dest: /etc/systemd/system/shipping.service
+
+  - name: daemon reload
+    ansible.builtin.systemd_service:
+      daemon_reload: true
+
+  - name: start and enable shipping service
+    ansible.builtin.service:
+      name: shipping
+      state: started
+      enabled: true
+
+  - name: install mysql client
+    ansible.builtin.package:
+      name: mysql
+      state: present
+
+  - name: connect to mysql using app user
+    community.mysql.mysql_info:
+      login_user: shipping
+      login_password: RoboShop@1
+      login_host: mysql.laddudevops.shop
+      login_db: cities
+
+  - 
+
+
 
