--- a/shipping.yaml
+++ b/shipping.yaml
@@ -73,14 +73,35 @@
       name: mysql
       state: present
 
-  - name: connect to mysql using app user
-    community.mysql.mysql_info:
-      login_user: shipping
+  # - name: connect to mysql using app user
+  #   community.mysql.mysql_info:
+  #     login_user: shipping
+  #     login_password: RoboShop@1
+  #     login_host: mysql.laddudevops.shop
+  #     login_db: cities
+
+  - name: Import data
+    tags: 
+    - import
+    community.mysql.mysql_db:
+      name: all
+      login_user: root
       login_password: RoboShop@1
       login_host: mysql.laddudevops.shop
-      login_db: cities
+      state: Import
+      target: "{{ item }}"
+    loop:
+    - /app/db/schema.sql
+    - /app/db/app-user.sql 
+    - /app/db/master-data.sql
 
-  - 
+  - name: restart shipping
+    ansible.builtin.service:
+      name: shipping
+      state: restarted
+
+  
+
 
 
 
