--- a/shipping.yaml
+++ b/shipping.yaml
@@ -88,7 +88,7 @@
       login_user: root
       login_password: RoboShop@1
       login_host: mysql.laddudevops.shop
-      state: Import
+      state: import
       target: "{{ item }}"
     loop:
     - /app/db/schema.sql
@@ -96,6 +96,8 @@
     - /app/db/master-data.sql
 
   - name: restart shipping
+    tags:
+    - import
     ansible.builtin.service:
       name: shipping
       state: restarted
