--- a/inventory.ini
+++ b/inventory.ini
@@ -14,3 +14,7 @@ frontend.laddudevops.shop
 mysql.laddudevops.shop
 [shipping]
 shipping.laddudevops.shop
+[rabbitmq]
+rabbitmq.laddudevops.shop
+[payment]
+payment.laddudevops.shop
